feat(balance) add endpoint to work with users balance (#4)
* feat(balance) add endpoint to work with users balance

* fix(balance) small fixes in dto

* fix(balance) small make file fixes

---------
